nginx-ingress-cotroller-tls/monitoring-grafana-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "internal-cluster-issuer"  # 👉 seu ClusterIssuer self-signed
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - monitoring.grafana.k3s.local
      secretName: grafana-monitoring-tls
  rules:
    - host: monitoring.grafana.k3s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
