nginx-ingress-cotroller-tls/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "internal-cluster-issuer"  # Remova ou edite se não usar TLS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.k3s.local
      secretName: prometheus-tls
  rules:
    - host: prometheus.k3s.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: monitoring-kube-prometheus-prometheus
              port:
                number: 9090
